[gd_scene load_steps=8 format=3 uid="uid://cslwwf22ldbji"]

[ext_resource type="Script" uid="uid://demrs8a2sjrvj" path="res://scripts/menu.gd" id="1_xhh6f"]
[ext_resource type="FontFile" uid="uid://cbl5g3px27xp1" path="res://assets/fonts/PixelOperator8.ttf" id="2_cayip"]

[sub_resource type="Animation" id="Animation_cayip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menuContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("optionsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wwsa2"]
resource_name = "colorRect"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.435294)]
}

[sub_resource type="Animation" id="Animation_xhh6f"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menuContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_158mb"]
resource_name = "options"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("optionsContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_158mb"]
_data = {
&"RESET": SubResource("Animation_cayip"),
&"colorRect": SubResource("Animation_wwsa2"),
&"menu": SubResource("Animation_xhh6f"),
&"options": SubResource("Animation_158mb")
}

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhh6f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_158mb")
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1157.0
offset_bottom = 654.0

[node name="menuContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -64.0
offset_right = 96.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="menuContainer"]
layout_mode = 2
alignment = 1

[node name="play" type="Button" parent="menuContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="options" type="Button" parent="menuContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="quit" type="Button" parent="menuContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="optionsContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -42.0
offset_right = 190.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="optionsContainer"]
layout_mode = 2

[node name="toggleMusic" type="CheckButton" parent="optionsContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 32
text = "Toggle Music "

[node name="back" type="Button" parent="optionsContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 32
text = "Back to Menu"

[connection signal="pressed" from="menuContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menuContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="menuContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="optionsContainer/VBoxContainer/toggleMusic" to="." method="_on_toggle_music_pressed"]
[connection signal="pressed" from="optionsContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
